# KRust

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
Kernel/: Cargo.toml
Kernel/src/: main.rs  vga.rs
kernel/: Cargo.toml
kernel/src/: main.rs
src/: main.rs
vga/: Cargo.toml
vga/src/: buffer.rs  colours.rs  lib.rs  print.rs  writer.rs
