[package]
name = "KRust"
version = "0.1.0"
edition = "2018"
authors = ["Aadith Yadav G <aadith.ygalu@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
